commit-web- terminada

--- a/menu/platosFuertes.html
+++ b/menu/platosFuertes.html
@@ -9,10 +9,10 @@
     <meta property="og:title" content="Sabor & Tradición">
     <meta property="og:description" content="Restaurante de comida tradicional con un toque especial">
     <meta property="og:image" content="/assets/img/icono_restaurante.png">
-    <meta property="og:url" content="https://menu/postres.html">
+    <meta property="og:url" content="https://menu/platosFuertes.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/img/icono_restaurante.png" type="image/x-icon">
-    <title>POSTRES</title>
+    <title>PLATOS FUERTES</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -40,36 +40,35 @@
     </nav>
 
         <div class="container-index">
-            <h1>Postres</h1>
-            <p>Disfruta de nuestros deliciosos postres, preparados con los mejores ingredientes y el toque especial de Sabor & Tradición.</p>
+            <h1>Platos Fuertes</h1>
+            <p>Disfruta de nuestros deliciosos platos fuertes, preparados con los mejores ingredientes y el toque especial de Sabor & Tradición.</p>
         </div>
 
         <div class="container-opcions">
             <div class="container-opcions-card">
-                <img src="../assets/img/postres/postre1.jpg" alt="">
-                <h2>Pastel de Chocolate</h2>
-                <p>Un clásico que nunca falla, nuestro pastel de chocolate es esponjoso, húmedo y con un intenso sabor a cacao. Acompañado de una bola de helado de vainilla, es el postre perfecto para los amantes del chocolate.</p>
+                <img src="../assets/img/platos/plato1.jpg" alt="">
+                <h2>Jocon</h2>
+                <p>Un clásico de la gastronomía guatemalteca, nuestro jocon es un guiso de pollo en una salsa verde espesa y aromática, preparada con tomate, chile verde, cilantro y especias. Se sirve con arroz blanco y tortillas calientes.</p>
                 <p>Q <span>150.00</span></p>
             </div>
             <div class="container-opcions-card">
-                <img src="../assets/img/postres/postre2.jpg" alt="">
-                <h2>Flan de Caramelo</h2>
-                <p>Un postre tradicional que nunca pasa de moda, nuestro flan de caramelo es suave, cremoso y con un delicado sabor a vainilla. La salsa de caramelo le da un toque dulce y acaramelado que lo hace irresistible.</p>
-                <p>Q <span>100.00</span></p>
-            </div>
-            <div class="container-opcions-card">
-                <img src="../assets/img/postres/postre3.jpg" alt="">
-                <h2>Pastel de Zanahoria</h2>
-                <p>Una opción más saludable pero igual de deliciosa, nuestro pastel de zanahoria es jugoso, aromático y con un sabor equilibrado de especias. El frosting de queso crema le da un toque cremoso y ligeramente ácido que lo hace irresistible.</p>
+                <img src="../assets/img/platos/plato2.jpg" alt="">
+                <h2>Pepian</h2>
+                <p>Otro plato tradicional de Guatemala, nuestro pepián es un guiso de carne de res en una salsa roja espesa y picante, preparada con tomate, chile seco, pepitoria y especias. Se sirve con arroz blanco y tortillas calientes.</p>
                 <p>Q <span>120.00</span></p>
             </div>
             <div class="container-opcions-card">
-                <img src="../assets/img/postres/postre4.jpg" alt="">
-                <h2>Helado de Vainilla</h2>
-                <p>Un clásico que nunca falla, nuestro helado de vainilla es cremoso, suave y con un intenso sabor a vainilla. Perfecto para acompañar cualquier postre o disfrutar solo en un día caluroso.</p>
-                <p>Q <span>50.00</span></p>
+                <img src="../assets/img/platos/plato3.jpg" alt="">
+                <h2>Chiles Rellenos</h2>
+                <p>Una delicia de la cocina mexicana, nuestros chiles rellenos son chiles poblanos asados, rellenos de queso y bañados en una salsa de jitomate. Se sirven con arroz blanco y tortillas calientes.</p>
+                <p>Q <span>130.00</span></p>
             </div>
-            
+            <div class="container-opcions-card">
+                <img src="../assets/img/platos/plato4.jpg" alt="">
+                <h2>Carne Asada</h2>
+                <p>Un clásico de la parrilla, nuestra carne asada es un corte de carne de res marinado y asado a la parrilla, servido con guacamole, pico de gallo, frijoles refritos y tortillas calientes.</p>
+                <p>Q <span>160.00</span></p>
+            </div>
         </div>
 
         <footer>
