--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Sitio web de restaurante Sabor & Tradición">
+    <meta name="keywords" content="restaurante, comida, postres, platos fuertes, reseñas, personal, recetas">
+    <meta name="author" content="Sabor & Tradición">
+    <meta property="og:title" content="Sabor & Tradición">
+    <meta property="og:description" content="Restaurante de comida tradicional con un toque especial">
+    <meta property="og:image" content="/assets/img/icono_restaurante.png">
+    <meta property="og:url" content="https://index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/assets/img/icono_restaurante.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css"> 
-    <link rel="stylesheet" href="style.css">  
     <title>Sabor & Tradición</title>
 </head>
     <body>
@@ -16,15 +24,22 @@
                         <summary>Menú</summary>
                         <ul class="submenu">
                             <li><a href="./menu/postres.html">Postres</a></li>
-                            <li><a href="entradas.html">Entradas</a></li>
-                            <li><a href="platosfuertes.html">Platos Fuertes</a></li>
+                            <li><a href="/menu/platosFuertes.htmlreceta">Platos Fuertes</a></li>
                     </details>
                 </li>
-                <li><a href="reservaciones.html">Reservaciones</a></li>
+                <li>
+                    <details>
+                        <summary>Información</summary>
+                        <ul class="submenu">
+                            <li><a href="/resenias/resenias.html">Reseñas</a></li>
+                            <li><a href="personal/personal.html">Personal</a></li>
+                            <li><a href="recetas/recetas.html">Recetas</a></li>
+                    </details>
+                </li>
             </ul>
         </nav>
         <h1>Sabor & Tradición</h1>
-
+        <hr />
         <div class="container-index">
             <h2>Misión</h2>
             <p>En Sabor & Tradición, nuestra misión 
@@ -36,7 +51,7 @@
                 disfrutando de la mejor comida con el verdadero sabor
                 de la tradición.</p>
         </div>
-
+        <hr />
         <div class="container-index">
             <h2>Visión</h2>
             <p>Ser el restaurante de referencia en la comunidad, reconocido por nuestra calidad, calidez y compromiso con la excelencia culinaria. Queremos innovar sin perder nuestras raíces, expandiéndonos para compartir nuestro sabor con más personas y convirtiéndonos en un lugar donde se crean momentos especiales alrededor de la mesa.</p>
@@ -48,10 +63,10 @@
             <img src="./assets/img/img3.jpg" alt="Gallery 1">
             <img src="./assets/img/img4.jpg" alt="Gallery 1">
         </div>
-
+        <hr />
         <footer>
             <p>&copy; 2021 Sabor & Tradición</p>
         </footer>
-
+        <hr />
     </body>     
 </html>
