--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                         <ul class="submenu">
                             <li><a href="/resenias/resenias.html">Reseñas</a></li>
                             <li><a href="personal/personal.html">Personal</a></li>
-                            <li><a href="recetas/recetas.html">Recetas</a></li>
+                            <li><a href="/recetas/recetas_dulces.html">Recetas Dulces</a></li>
+                            <li><a href="/recetas/recetas_saladas.html">Recetas Saldas</a></li>
                     </details>
                 </li>
             </ul>
