--- a/recetas/recetas_saladas.html
+++ b/recetas/recetas_saladas.html
@@ -33,7 +33,8 @@
                     <ul class="submenu">
                         <li><a href="../resenias/resenias.html">Reseñas</a></li>
                         <li><a href="../personal/personal.html">Personal</a></li>
-                        <li><a href="../recetas/recetas.html">Recetas</a></li>
+                        <li><a href="../recetas/recetas_dulces.html">Recetas Dulces</a></li>
+                        <li><a href="../recetas/recetas_saladas.html">Recetas Saladas</a></li>
                 </details>
             </li>
         </ul>
@@ -41,35 +42,6 @@
     <div class="container-index">
         <h1>Recetas</h1>
         <p>Descubre nuestras recetas más deliciosas, preparadas con los mejores ingredientes y el toque especial de Sabor & Tradición.</p>
-    </div>
-
-    <h2>Dulce</h2>
-    <div class="recipes-container">
-        <div class="recipe-card">
-            <img src="../assets/img/recetas/receta1.jpg" alt="Brownies">
-            <h3>Brownies de Chocolate</h3>
-            <p>Brownies suaves y húmedos con un intenso sabor a chocolate.</p>
-        </div>
-        <div class="recipe-card">
-            <img src="../assets/img/recetas/receta2.jpg" alt="Cheesecake">
-            <h3>Cheesecake de Fresa</h3>
-            <p>Tarta de queso con una base de galleta y cubierta de fresas.</p>
-        </div>
-        <div class="recipe-card">
-            <img src="../assets/img/recetas/receta3.jpg" alt="Donas">
-            <h3>Donas Glaseadas</h3>
-            <p>Deliciosas donas esponjosas con glaseado de azúcar.</p>
-        </div>
-        <div class="recipe-card">
-            <img src="../assets/img/recetas/receta4.jpg" alt="Tiramisú">
-            <h3>Tiramisú Clásico</h3>
-            <p>Postre italiano con capas de café, mascarpone y cacao.</p>
-        </div>
-        <div class="recipe-card">
-            <img src="../assets/img/recetas/receta5.jpg" alt="Helado">
-            <h3>Helado Casero</h3>
-            <p>Helado cremoso de vainilla con trozos de chocolate.</p>
-        </div>
     </div>
     <h2>Salado</h2>
     <div class="recipes-container">
