--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <summary>Menú</summary>
                         <ul class="submenu">
                             <li><a href="./menu/postres.html">Postres</a></li>
-                            <li><a href="/menu/platosFuertes.htmlreceta">Platos Fuertes</a></li>
+                            <li><a href="/menu/platosFuertes.html">Platos Fuertes</a></li>
                     </details>
                 </li>
                 <li>
